Collage page - bug fixed = item z-index is now properly sorted when an item is cloned

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3093,9 +3093,9 @@ li{
 	height:120px;
 	position: relative;
 	opacity:0.9;
-	border-bottom:1px solid rgb(200,200,200);
-	border-top:1px solid rgb(200,200,200);
+	border:1px solid rgb(200,200,200);
 	cursor:move;
+	background-color:rgb(34,34,34);
 }
 
 .layers div,
